[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ContextualBandit"
version = "0.1.0"
description = "Contextual bandit algorithms for FX strategy selection on synthetic non-stationary data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Anders", email = "" },
]
dependencies = [
  "appnope==0.1.4",
  "asttokens==3.0.0",
  "comm==0.2.2",
  "contourpy==1.3.1",
  "cycler==0.12.1",
  "debugpy==1.8.13",
  "decorator==5.2.1",
  "executing==2.2.0",
  "fonttools==4.57.0",
  "ipykernel==6.29.5",
  "ipython==9.0.2",
  "ipython_pygments_lexers==1.1.1",
  "jedi==0.19.2",
  "joblib==1.4.2",
  "jupyter_client==8.6.3",
  "jupyter_core==5.7.2",
  "kiwisolver==1.4.8",
  "matplotlib==3.10.1",
  "matplotlib-inline==0.1.7",
  "nest-asyncio==1.6.0",
  "numpy==2.2.4",
  "packaging==24.2",
  "pandas==2.2.3",
  "parso==0.8.4",
  "patsy==1.0.1",
  "pexpect==4.9.0",
  "pillow==11.1.0",
  "platformdirs==4.3.7",
  "prompt_toolkit==3.0.50",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "Pygments==2.19.1",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "pyzmq==26.4.0",
  "scikit-learn==1.6.1",
  "scipy==1.15.2",
  "seaborn==0.13.2",
  "six==1.17.0",
  "stack-data==0.6.3",
  "statsmodels==0.14.4",
  "threadpoolctl==3.6.0",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "tzdata==2025.2",
  "wcwidth==0.2.13",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[dependency-groups]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
# Explicitly declare files to include so the project can be installed in editable mode
only-include = [
  "bandit_base.py",
  "bandit_algorithms.py",
  "bandit_experiment.py",
  "data_generator.py",
  "README.md",
  "requirements.txt",
  "fx_trading_dataset.json",
  "volatility_series.csv",
  "bandit_main.ipynb",
  "bandit_mc.ipynb",
  "fx_data_generation.ipynb",
]

[tool.hatch.build.targets.sdist]
include = [
  "bandit_base.py",
  "bandit_algorithms.py",
  "bandit_experiment.py",
  "data_generator.py",
  "README.md",
  "requirements.txt",
  "fx_trading_dataset.json",
  "volatility_series.csv",
  "bandit_main.ipynb",
  "bandit_mc.ipynb",
  "fx_data_generation.ipynb",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.(py|pyi)$'
exclude = '''
(
  /\.venv/
| /build/
| /dist/
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "build",
  "dist",
  "*.ipynb",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["**/*.py"]
exclude = [
  '^\.venv/',
  '^build/',
  '^dist/',
]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
pretty = true
